# mystery-edge-collisions

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
art/: level.blend
assets/maps/: level_0.glb  level_0_broken.glb  level_0_edit_0.glb  level_0_edit_1.glb  level_0_edit_2.glb  level_0_edit_3.glb  level_0_edit_fixed.glb  level_0_reduced.glb
rapier/: Cargo.toml
rapier/src/: main.rs
src/: main.rs
