[package]
name = "rapier_example"
edition = "2024"


[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["default_app", "default_platform", "common_api", "scene", "2d", "3d"] }

nalgebra = { version = "0.34.2", features = ["convert-glam030"] }
# bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier.git" }
# rapier3d = { git = "https://github.com/dimforge/rapier.git" }
bevy_rapier3d = { version = "0.33.0" }
rapier3d = { version = "0.33.0" }
bitflags = "2.10.0"
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
